# XyrethAI

./: .flutter-plugins  .flutter-plugins-dependencies  .gitattributes  .gitignore  CODEOWNERS  Cargo.toml  LICENSE  LICENSE.txt  README.md  bootstrap.seo  build.seo  build.zig  install.sh  project.seo  pubspec.yaml  requirements.txt  setup.py  setup.zsh
.dart_tool/: package_config.json  package_config_subset
.dart_tool/extension_discovery/: vs_code.json
.github/workflows/: ci.yml
bootstrap/: seoc.c
config/: config.yaml  logging.yaml
core/model/: framework.seo
docs/: ARCHITECTURE.md  api_reference.md  next steps.txt  user_guide.md
models/: model_architecture.json
notebooks/: model_evaluation.ipynb
scripts/: data_preprocessing.py  data_visualization.py  model_evaluation.py  model_training.py  setup.sh  train_model.py  utils.py  voice_interaction.py  your_script.py
src/: bridge_generated.dart  lib.rs  main.rs  main.seo  main.zig
src/browser_integration/: web_api.rs
src/core/: ai_engine.rs  ai_engine.seo  benchmarking.rs  character_control.rs  data_preprocessing.rs  error.rs  file_organizer.rs  flags.zy  hyperparameter_tuning.rs  interaction.rs  learning.rs  learning.zy  lib.zig  logger.rs  logic.seo  memory.seo  mod.rs  neural.seo  patterns.zy  platform.seo  platform_module.rs  resources.zy  seokjin.seo  types.seo  ui_interactions.rs  voice.seo  web.seo
src/tests/: mod.rs
tests/: ai_engine_tests.rs  integration_tests.rs  learning_tests.rs  test_character.py  test_data_preprocessing.py  test_model.py  test_model_evaluation.py  test_model_training.py
(+27 files in other folders)
