[package]
name = "seokjin"
version = "0.1.0"
edition = "2021"

[dependencies]
flutter_rust_bridge = "1.82.6"
ocl = "0.19.6"
reqwest = { version = "0.11.24", features = ["blocking"] }
scraper = "0.18.1"
url = "2.5.0"
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
log = "0.4.21"
chrono = "0.4.34"
whatlang = "0.16.3"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
futures = "0.3.30"
anyhow = "1.0.80"
thiserror = "1.0.57"
rand = "0.8.5"
cpal = "0.15.3"
hound = "3.5.1"
